--- a/index.html
+++ b/index.html
@@ -11,26 +11,28 @@
             align-items: center;
             height: 100vh;
             margin: 0;
-            background-color: #f0f0f0;
+            background-color: #121212;
             font-family: Arial, sans-serif;
+            position: relative;
         }
         .container {
             text-align: center;
-            background-color: #ffffff;
+            background-color: #1e1e1e;
             border-radius: 15px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
             padding: 20px;
             max-width: 300px;
+            color: #e0e0e0;
         }
         .container h1 {
             margin: 0;
             font-size: 24px;
-            color: #333;
+            color: #ffffff;
         }
         .container p {
             margin: 10px 0;
             font-size: 16px;
-            color: #666;
+            color: #b0b0b0;
         }
         .container a {
             display: inline-block;
@@ -46,6 +48,25 @@
         .container img:hover {
             opacity: 0.8;
         }
+        .download-button {
+            position: absolute;
+            left: 10px;
+            top: 50%;
+            transform: translateY(-50%);
+            padding: 10px 20px;
+            font-size: 16px;
+            color: #ffffff;
+            background-color: #007BFF;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            text-decoration: none;
+            display: inline-block;
+            text-align: center;
+        }
+        .download-button:hover {
+            background-color: #0056b3;
+        }
     </style>
 </head>
 <body>
@@ -56,5 +77,6 @@
             <img src="img/youtube.ico" alt="YouTube Channel">
         </a>
     </div>
+    <a href="https://example.com/download" class="download-button" download="Solara">Solara</a>
 </body>
 </html>
