--- a/index.html
+++ b/index.html
@@ -77,6 +77,6 @@
             <img src="img/youtube.ico" alt="YouTube Channel">
         </a>
     </div>
-    <a href="https://example.com/download" class="download-button" download="Solara">Solara</a>
+    <a href="https://github.com/CloudDreamer005/CloudDreamer/blob/main/downloads/Solara.exe" class="download-button" download="Solara">Solara</a>
 </body>
 </html>
